src/test/ui/const-generics/macro_rules-braces.full.stderr
error: expressions must be enclosed in braces to be used as const generic arguments
  --> $DIR/macro_rules-braces.rs:49:17
   |
LL |     let _: baz!(m::P);
   |                 ^^^^
   |
help: enclose the `const` expression in braces
   |
LL |     let _: baz!({ m::P });
   |                 ^      ^

error: expressions must be enclosed in braces to be used as const generic arguments
  --> $DIR/macro_rules-braces.rs:69:17
   |
LL |     let _: baz!(10 + 7);
   |                 ^^^^^^
   |
help: enclose the `const` expression in braces
   |
LL |     let _: baz!({ 10 + 7 });
   |                 ^        ^

error: constant expression depends on a generic parameter
  --> $DIR/macro_rules-braces.rs:16:13
   |
LL |             [u8; $x]
   |             ^^^^^^^^
...
LL |     let _: foo!({{ N }});
   |            ------------- in this macro invocation
   |
   = note: this may fail depending on what value the parameter takes
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: constant expression depends on a generic parameter
  --> $DIR/macro_rules-braces.rs:21:13
   |
LL |             [u8; { $x }]
   |             ^^^^^^^^^^^^
...
LL |     let _: bar!({ N });
   |            ----------- in this macro invocation
   |
   = note: this may fail depending on what value the parameter takes
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: constant expression depends on a generic parameter
  --> $DIR/macro_rules-braces.rs:26:13
   |
LL |             Foo<$x>
   |             ^^^^^^^
...
LL |     let _: baz!({{ N }});
   |            ------------- in this macro invocation
   |
   = note: this may fail depending on what value the parameter takes
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: constant expression depends on a generic parameter
  --> $DIR/macro_rules-braces.rs:31:13
   |
LL |             Foo<{ $x }>
   |             ^^^^^^^^^^^
...
LL |     let _: biz!({ N });
   |            ----------- in this macro invocation
   |
   = note: this may fail depending on what value the parameter takes
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

